# PyUDT

./: .gitignore  .gitmodules  .travis.build.sh  .travis.yml  CMakeLists.txt  README.md  setup.py
example/pyudt/epoll/: server.py
example/pyudt/fail0/: test.py
example/pyudt/settings/: server.py
example/udt4/mixed_python_c/: build.sh  client.cc
example/udt4/sendrecv_file/: server.py
example/udt4/socket/: client.py  server.py
include/: Debug.hh  Epoll.hh  Exception.hh  Socket.hh  SourcesLib.cmake
legacy/example/: run_tests.sh
legacy/example/udt4/mixed_python_c/: server.cc
legacy/example/udt4/sendrecv_file/: client.py  init.py
legacy/example/udt4/socket/: init.py
legacy/src/: py-udt4-epoll.cc  py-udt4-epoll.hh  py-udt4-socket.hh  py-udt4.hh
package/pyudt/: __init__.py
package/udt4_ext/include/: Debug.hh  Epoll.hh  Exception.hh  Memory.hh  Socket.hh  SourcesLib.cmake
package/udt4_ext/src/: Epoll.cpp  Exception.cpp  PyUDT.cpp  Socket.cpp  SourcesLib.cmake
src/: Epoll.cpp  Exception.cpp  PyUDT.cpp  Socket.cpp  SourcesLib.cmake  py-udt4-socket.hh
test/: run_tests.py
test/test_udt4/: test_bindings.py
test/udt4/: test_bindings.py
