CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS python)

ENABLE_TESTING()

INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
  "${CMAKE_CURRENT_SOURCE_DIR}/src"
  "${CMAKE_CURRENT_BINARY_DIR}"
  ${Boost_INCLUDE_DIRS}
  ${PYTHON_INCLUDE_DIRS}
)

LINK_LIBRARIES(${Boost_LIBRARIES})

INCLUDE(src/SourcesLib.cmake)
INCLUDE(include/SourcesLib.cmake)

PYTHON_ADD_MODULE(pyudt ${PYUDT_SOURCE} ${PYUDT_HEADERS})
TARGET_LINK_LIBRARIES(pyudt udt)
FILE(COPY test/test_udt4/test_bindings.py DESTINATION .)
ADD_TEST(test_bindings test_bindings.py)
